# telegram-bot

./: .gitignore  README.md
.github/workflows/: cargo.yml  docker.yml
app/: Cargo.toml  Dockerfile
app/common/: Cargo.toml
app/common/src/: lib.rs
app/scheduler/: Cargo.toml
app/scheduler/src/: inputs.rs  lib.rs  main.rs  service.rs
app/src/: config.rs  main.rs  service.rs  telegram.rs
app/src/telegram/: service.rs  types.rs
app/storage/: Cargo.toml
app/storage/src/: errors.rs  lib.rs  sled.rs
app/telegram/: Cargo.toml
app/telegram/src/: lib.rs
app/webhook/: Cargo.toml
app/webhook/src/: main.rs  service.rs
k8s/charts/infra/: Chart.yaml  values.yaml
k8s/charts/infra/templates/: scheduler-statefulset.yaml  webhook-deployment.yaml  webhook-service.yaml
