[package]
name = "webhook"
version = "0.1.0"
authors = ["roychiang"]
edition = "2018"

[dependencies]
telegram = { path = "../telegram" }
scheduler = { path = "../scheduler" }
log = "0.4"
pretty_env_logger = "0.4"
reqwest = { version = "0.11", features= ["json"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.6", features = ["full"] }
config = "0.11"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.64"
async-trait = "0.1"

[dev-dependencies]
mockall = { version = "0.9.1", features = ["nightly"] }